--- a/css/osama.css
+++ b/css/osama.css
@@ -14,6 +14,8 @@
     --main-color:#feda4e;
     --main-color2:#fe4e4e;
     --main-color3:#19c8fa;
+    --main-color-treans:#19c9fa88;
+    --main-color-treans:rgba(15, 116, 143, 0.70);
 }
 html {
   scroll-behavior: smooth;
@@ -59,7 +61,11 @@ a{
 /* Start Header ------------------------------------------------ */
 
 header{
-
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 2;
 }
 header .container{
     display: flex;
@@ -146,6 +152,9 @@ header nav ul{
     align-items: center;
     margin-right: 30px;
 }
+
+/* Start mop-Header ------------------------------------------------ */
+
 @media (max-width: 767px){
     header nav ul{
         display: none;
@@ -159,7 +168,7 @@ header nav ul{
     top: 97px;
     left: 0;
     width: 100%;
-    background-color: #00000063;
+    background-color: #0000006c;
 }
 .nListOn li {
     /* height: 10px; */
@@ -172,6 +181,8 @@ header nav ul{
     margin-left: 10px;
     margin-right: 10px;
 }
+/* End mop-Header ------------------------------------------------ */
+
 header nav ul li a{
     display: block;
     padding: 40px 10px;
@@ -204,3 +215,90 @@ header .form i:hover{
 }
 
 /* End Header -------------------------------------------------*/
+
+
+/* Start Landing ------------------------------------------------ */
+.landing{
+    background-color: #202020;
+    background-image: url(../image/landing-back-2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+}
+.landing .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: hsla(0, 0%, 0%, 0.5);
+    height: 100%;
+    width: 100%;
+}
+.profilePic{
+    /* background-color: var(--main-color-treans); */
+    position: absolute;
+    width: 50%;
+    top: 50%;
+    right: 0;
+    transform: translatey(-50%);
+    display: flex;
+    justify-content: center;
+
+}
+.profilePic .img{
+    padding: 50px;
+    max-height: 30%;
+    display: flex;
+    justify-content: center;
+
+}
+.profilePic .img img{
+    height: 100%;
+    border: 5px solid var(--main-color3);
+    border-radius: 50%;
+
+}
+    .floatDesc{
+    background-color: var(--main-color-treans);
+    position: absolute;
+    width: 50%;
+    top: 50%;
+    transform: translatey(-50%);
+    padding: 50px;
+    display: flex;
+    justify-content: flex-end;
+}
+.floatDesc .descContainer{
+    max-width: 600px;
+}
+/* --------------------media-mobile----------------- */
+@media (max-width: 767px){
+    .floatDesc, .floatDesc .descContainer {
+        width: 100%;
+    }
+    .profilePic{
+        width: 100%;
+        top: 300px;
+    }
+    .floatDesc{
+        top: 79%;
+    }
+}
+
+.floatDesc .descContainer h2{
+    line-height: 1.5;
+    font-size: 32px;
+    font-weight: normal;
+    margin-bottom: 20px;
+}
+.floatDesc .descContainer p{
+    line-height: 2;
+    font-size: 14px;
+}
+
+
+
+
+
+/* End Landing ------------------------------------------------ */
