--- a/css/osama.css
+++ b/css/osama.css
@@ -314,7 +314,7 @@ header .form i:hover {
   background-color: var(--main-color-treans);
   position: absolute;
   width: 50%;
-  top: 50%;
+  top: 40%;
   transform: translatey(-50%);
   padding: 50px;
   display: flex;
@@ -363,6 +363,9 @@ header .form i:hover {
     .floatDesc .descContainer {
       width: 100%;
     }
+    /* .floatDesc{
+      margin-bottom: 100px;
+    } */
     .overlay {
       display: flex;
       flex-direction: column;
